# EverDream

./: .gitignore  BUG_FIXES_SUMMARY.md  DREAM_ANALYSIS_SETUP.md  Dockerfile  FIXES.md  IMPLEMENTATION_LOG.md  IMPLEMENTATION_PLAN.md  LICENSE  QUICK_START.md  TESTING_GUIDE_V2.md  VIDEO_JOURNAL_PRIORITY.md  test-dream-analysis.js
DEV/: README.md
contracts/: .gitignore  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
design-mockups/: README.md  VIDEO_CAPTURE_UX.md  interactive-mockup.html
discord-bot/: Dockerfile  package-lock.json  package.json
docs/: COMPETITIVE_AUDIT_AND_GAPS.md  LOGIN_DEBUG_2026-07-21.md  SUPABASE_C1_MIGRATION_INSTRUCTIONS.md  coolify-go-live-checklist.md
ed.app.local.server/: .env.example
ed.app.lovable/: 20260513093336_741f5286-9fab-47f7-99fa-66c30c7691c2.sql  20260513093349_d591ed70-46a5-4e04-b39d-f6a5df3b7947.sql  __root.tsx  config.toml  env  index.tsx  loading-screen.tsx  login.tsx  plan.md  reset-password.tsx  routeTree.gen.ts  styles.css  types.ts  use-auth.ts
ed.app.new/: .env.example  .gitignore  BACKEND_STATUS.md  DEV_HANDOFF.md  DREAM_IMAGE_GENERATION.md  Dockerfile  app.json  (+28 more)
xael-phone-os/src/node-daemon/: Cargo.toml
xael-phone-os/src/node-daemon/src/: config.rs  error.rs  lib.rs  main.rs  metrics.rs
xael-phone-os/src/node-daemon/src/communication/: grpc_client.rs  mod.rs  websocket.rs
xael-phone-os/src/node-daemon/src/crypto/: mod.rs
xael-phone-os/src/node-daemon/src/execution/: inference_engine.rs  mod.rs  resource_allocator.rs  task_queue.rs
xael-phone-os/src/node-daemon/src/registry/: mod.rs
(+378 files in other folders)
