[package]
name = "xael-node-daemon"
version = "0.1.0-alpha"
edition = "2021"
authors = ["XAEL Phone OS Team"]
description = "Minimalist node daemon for XAEL Phone OS - DYNA compute network integration"
license = "Apache-2.0"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Networking
tokio-tungstenite = "0.21"
tonic = "0.10"
prost = "0.12"
hyper = { version = "0.14", features = ["full"] }

# Cryptography
ring = "0.17"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Configuration
config = "0.14"

# Time
chrono = "0.4"

# Hardware info
sysinfo = "0.30"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"

[[bin]]
name = "xael-daemon"
path = "src/main.rs"

[lib]
name = "xael_daemon"
path = "src/lib.rs"
